--- a/.github/workflows/run_getimport.yml
+++ b/.github/workflows/run_getimport.yml
@@ -26,6 +26,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
+      - name: Install and start Ollama
+        run: |
+          curl -fsSL https://ollama.com/install.sh | sh
+          ollama serve > /dev/null 2>&1 &
+          echo "Waiting for Ollama to start..."
+          sleep 10
+          echo "Pulling model..."
+          ollama pull ${{ vars.OLLAMA_MODEL || 'llama3.1:8b' }}
+          echo "Ollama is ready"
+      
       - name: Run getimport.py
         id: extract_players
         env:
